# data-dashboards

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
covid/: data_utils.py  urls.py  views.py
covid/templates/covid/: base.html  history.html  index.html
data_dashboard/: asgi.py  db.sqlite3  urls.py  wsgi.py
data_dashboard/settings/: __init__.py  base.py  environment.py  local-dev.py  production.py
