[tool.poetry]
name = "data_dashboard"
version = "0.1.0"
description = "Various data dashboards"
authors = ["lee <lee@logicon.io>"]
license = """Copyright 2020 Lee Hodgkinson
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
"""

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
plotly = "^4.14.1"
Django = "^3.1.4"
requests = "^2.25.0"
django-bootstrap4 = "^2.3.1"
google-cloud-bigquery = "^2.6.1"
pandas-gbq = "^0.14.1"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
whitenoise = "^5.2.0"
pylibmc = "1.5.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"
coloredlogs = "^15.0"
Werkzeug = "^1.0.1"
django-extensions = "^3.1.0"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
virtualenvs.in-project = true
